@@ -1,15 +1,8 @@
-Unknown :
 	- if ~/.xfce4/menu.xml doesn't exist create it from default
-	- Test deeply dnd
 	- Ask to save only if real changes
 	- More Debug informations
-	- Clean the code
+	- !!! Clean the code !!!
 	- check if binary exists
 	- use the status bar
-	- use the xfce_aboutdialog
 	- permit choice of the colors
 
-In Version 1.1:
-	- Undo support
-	- support DND from .desktop files
-	- search for icon in default directory when editing 
