@@ -1,3 +1,6 @@
+2004-02-24 pollux
+	- manages icon theme changes
+
 2004-02-20 pollux
 	- uses xfce_about_dialog (with CVS libs)
 	- searches for icon in default directory
